--- a/src/app/pages/dashboards/project-anality/project-anality.component.html
+++ b/src/app/pages/dashboards/project-anality/project-anality.component.html
@@ -8,19 +8,22 @@
         <div class="row">
             <div class="col-xl-12">
                 <div class="card">
+                    <div class="card-header align-items-center d-flex">
+                        <h4 class="card-title mb-0 flex-grow-1">Configuración</h4>
+                    </div>
                     <div class="row margin-card">
                         <div class="col-lg-3">
-                        <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/areas"><span>1</span> > Configurar Areas Administrativas</button>
+                        <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/areas"><span style="border: 2px solid #fff;border-radius: 24px;font-size:16px;width: 28px;height: 28px;display:inline-block;">1</span> Configurar Areas Administrativas</button>
                         </div>
 
                         <div class="col-lg-3">
-                        <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/installations" *ngIf="areas_data.length > 0"><span>2</span> > Configurar Instalaciones y Procesos</button>
-                        <button type="button" class="btn btn-primary" style="background-color: #a8a8a8 !important;cursor: not-allowed;" *ngIf="areas_data.length < 1"><span>2</span> > Configurar Instalaciones y Procesos</button>
+                        <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/installations" *ngIf="areas_data.length > 0"><span style="border: 2px solid #fff;border-radius: 24px;font-size:16px;width: 28px;height: 28px;display:inline-block;">2</span> Configurar Instalaciones y Procesos</button>
+                        <button type="button" class="btn btn-primary" style="background-color: #a8a8a8 !important;cursor: not-allowed;" *ngIf="areas_data.length < 1"><span style="border: 2px solid #fff;border-radius: 24px;font-size:16px;width: 28px;height: 28px;display:inline-block;">2</span> Configurar Instalaciones y Procesos</button>
                         </div>
                         
                         <div class="col-lg-3">
-                            <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/type"  *ngIf="installations_data.length > 0"><span>3</span> > Conectar Normativas a procesos</button>
-                            <button type="button" class="btn btn-primary"   style="background-color: #a8a8a8 !important;cursor: not-allowed;" *ngIf="installations_data.length < 1"><span>3</span> > Conectar Normativas a procesos</button>
+                            <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/type"  *ngIf="installations_data.length > 0"><span style="border: 2px solid #fff;border-radius: 24px;font-size:16px;width: 28px;height: 28px;display:inline-block;">3</span> Conectar Normativas a procesos</button>
+                            <button type="button" class="btn btn-primary"   style="background-color: #a8a8a8 !important;cursor: not-allowed;" *ngIf="installations_data.length < 1"><span style="border: 2px solid #fff;border-radius: 24px;font-size:16px;width: 28px;height: 28px;display:inline-block;">3</span> Conectar Normativas a procesos</button>
                         </div>
                     </div>
                 </div>
