--- a/src/app/shared/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/breadcrumbs/breadcrumbs.component.html
@@ -2,8 +2,16 @@
  <div class="row">
     <div class="col-12">
         <div class="page-title-box d-sm-flex align-items-center justify-content-between">
-            <h4 class="mb-sm-0">{{title}}</h4>
-  
+            
+            <h4 class="mb-sm-0">
+            
+                <button class="btn btn-sm px-2 fs-22"
+                    [style.cursor]="'pointer'" (click)="backClicked()">
+                    <i class="ri-arrow-left-s-line"></i>
+                </button>
+                            {{title}}
+            </h4>
+            
             <div class="page-title-right">
                 <ol class="breadcrumb m-0">
                   <ng-container *ngFor="let item of breadcrumbItems">
