--- a/src/app/pages/dashboards/project-anality/project-anality.component.html
+++ b/src/app/pages/dashboards/project-anality/project-anality.component.html
@@ -1,5 +1,5 @@
 <!-- Start Breadcrumbs -->
-<app-breadcrumbs title="Paso 3: Analisis - {{project.nombre}}" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+<app-breadcrumbs title="Paso 3: Identificación - {{project.nombre}}" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 <!-- End Breadcrumbs -->
 
  <div class="row project-wrapper">
@@ -24,6 +24,11 @@
                         <div class="col-lg-3">
                             <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/type"  *ngIf="installations_data.length > 0"><span style="border: 2px solid #fff;border-radius: 24px;font-size:16px;width: 28px;height: 28px;display:inline-block;">3</span> Conectar Normativas a procesos</button>
                             <button type="button" class="btn btn-primary"   style="background-color: #a8a8a8 !important;cursor: not-allowed;" *ngIf="installations_data.length < 1"><span style="border: 2px solid #fff;border-radius: 24px;font-size:16px;width: 28px;height: 28px;display:inline-block;">3</span> Conectar Normativas a procesos</button>
+                        </div>
+                        
+                        <div class="col-lg-3">
+                            <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/compliance"  *ngIf="installations_data.length > 0"><span style="border: 2px solid #fff;border-radius: 24px;font-size:16px;width: 28px;height: 28px;display:inline-block;">4</span> Evaluar cumplimiento</button>
+                            <button type="button" class="btn btn-primary"   style="background-color: #a8a8a8 !important;cursor: not-allowed;" *ngIf="installations_data.length < 1"><span style="border: 2px solid #fff;border-radius: 24px;font-size:16px;width: 28px;height: 28px;display:inline-block;">3</span> Evaluar cumplimiento</button>
                         </div>
                     </div>
                 </div>
