--- a/src/app/pages/projects/create/compliance/compliance.component.html
+++ b/src/app/pages/projects/create/compliance/compliance.component.html
@@ -94,7 +94,7 @@
                                     <td>
                                         
                                         <div class="d-flex gap-2">
-                                            <div class="edit">
+                                            <!--<div class="edit">
                                                 <button class="btn btn-sm btn-success edit-item-btn"
                                                     data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/type/installations/{{data.id}}/{{data.nombre}}/bodylegal"
                                                     >Ver</button>
@@ -105,6 +105,12 @@
                                                 <button class="btn btn-sm btn-danger remove-item-btn"
                                                     data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
                                                     (click)="confirm(deleteModel,data.id)">Remover</button>
+                                            </div>-->
+                                            
+                                            <div class="hstack gap-3 fs-15">
+                                                <a href="javascript:void(0);" class="link-primary" data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/type/installations/{{data.id}}/{{data.nombre}}/bodylegal"><i class="ri-pencil-fill"></i></a>
+                                                <a href="javascript:void(0);" class="link-danger" data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
+                                                (click)="confirm(deleteModel,data.id)"><i class="ri-delete-bin-5-line"></i></a>
                                             </div>
                                         </div>
                                     </td>
