--- a/src/app/pages/projects/create/type/body-legal/body-legal.component.html
+++ b/src/app/pages/projects/create/type/body-legal/body-legal.component.html
@@ -21,11 +21,11 @@
                 </div>
                 
                 <div class="col-xxl-3 col-lg-3">
-                    <div class="titulo-caja"><b>0 Cuerpos legales</b></div>
+                    <div class="titulo-caja"><b>{{installations_articles.length > 0 ? installations_articles.length : 0}} {{installations_articles.length == 1 ? 'Cuerpo legal' : 'Cuerpos legales'}}</b></div>
                 </div>
 
                 <div class="col-xxl-3 col-lg-3">
-                    <div class="titulo-caja"><b>0 Artículos</b></div>
+                    <div class="titulo-caja"><b>{{installations_articles.length > 0 ? installations_articles.length : 0}} {{installations_articles.length == 1 ? 'Artículo' : 'Artículos'}}</b></div>
                 </div>
 
                 <div class="col-xxl-3 col-lg-3">
