--- a/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
+++ b/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-xxl-3 col-lg-3">
                     <p><b>CUERPO LEGAL:</b></p>
-                    <p><b>{{detail.data.length > 0 ? detail.data.length : 0}} {{detail.data.length == 1 ? 'Cuerpo legal aplicable' : 'Cuerpos Legales aplicables'}}</b></p>
+                    <p><b>{{detail.data ? (detail.data.length > 0 ? detail.data.length : 0) : 0}} {{detail.data ? (detail.data.length == 1 ? 'Cuerpo legal aplicable' : 'Cuerpos Legales aplicables') : 'Cuerpos Legales aplicables'}}</b></p>
                 </div>
                 
                 <div class="col-xxl-3 col-lg-3">
