--- a/src/app/pages/projects/create/type/installations/installations.component.html
+++ b/src/app/pages/projects/create/type/installations/installations.component.html
@@ -116,7 +116,19 @@
                                 <ngb-highlight [result]="data.nombre"></ngb-highlight>
                               </td>
                               
-                            </ng-container> 
+                            </ng-container>
+                            
+                            <ng-container matColumnDef="area">
+                                
+                                <th mat-header-cell *matHeaderCellDef> 
+                                  <span [style.paddingLeft.px]="40"> Area </span>
+                                </th>
+                              
+                                <td mat-cell *matCellDef="let data">
+                                  <ngb-highlight [result]="data.area"></ngb-highlight>
+                                </td>
+                                
+                              </ng-container> 
                           
                             <ng-container matColumnDef="cuerpo">
                               <th mat-header-cell *matHeaderCellDef> Cuerpos legales vinculados </th>
