movimiento rutas new estructura

--- a/src/app/pages/projects/areas/areas.component.html
+++ b/src/app/pages/projects/areas/areas.component.html
@@ -1,5 +1,5 @@
 <!-- Start Breadcrumbs -->
-<app-breadcrumbs title="Areas Administrativas" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+<!--<app-breadcrumbs title="Areas Administrativas" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>-->
 <!-- End Breadcrumbs -->
 
 <!--preloader-->
