--- a/src/app/pages/projects/installations/installations.component.html
+++ b/src/app/pages/projects/installations/installations.component.html
@@ -1,5 +1,5 @@
 <!-- Start Breadcrumbs -->
-<app-breadcrumbs title="Instalaciones y Procesos" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+<!--<app-breadcrumbs title="Instalaciones y Procesos" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>-->
 <!-- End Breadcrumbs -->
 
 <!--preloader-->
