--- a/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
+++ b/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
@@ -177,7 +177,7 @@
                                         <div class="hstack gap-3 fs-15">
                                             <a href="javascript:void(0);" class="link-primary" 
                                             title="Editar"
-                                            data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Detail/{{data.id}}"
+                                            data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/compliance/{{installation_id}}/Task/{{data.id}}"
                                             ><i class="ri-pencil-fill"></i></a>
                                         </div>
                                     </div>
