--- a/src/app/pages/projects/create/compliance/task/task.component.html
+++ b/src/app/pages/projects/create/compliance/task/task.component.html
@@ -1,5 +1,5 @@
 <!-- Start Breadcrumbs -->
-<!--<app-breadcrumbs title="Instalaciones y Procesos" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>-->
+<app-breadcrumbs title="Paso 5: Evaluar Cumplimiento" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 <!-- End Breadcrumbs -->
 
 <!--preloader-->
@@ -15,7 +15,49 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title mb-0">{{subtitle}}</h4>
+                <span class="float-end text-secondary">
+                    <span class="hamburger-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    </span>
+                </span>
+                <h6 class="card-title">DS<!--{{detail.identificador ? detail.identificador.tipoNorma+' '+detail.identificador.numero : ''}} {{detail.tituloNorma ? detail.tituloNorma : ''}}--></h6>
+                
+                <!--<ng-container *ngFor="let org of detail.organismos">-->
+                    <p class="card-subtitle text-muted mb-0">Ministerio<!--{{org}}--></p>
+                <!--</ng-container>-->
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header">
+
+                <div class="col-xxl-12">
+                    <div class="card border card-border-primary" style="border-radius: 24px !important;">
+                        <div class="row g-0">
+                            <div class="col-md-12">
+                                <div class="card-body">
+                                    <h5 class="card-title mb-0">Artículo 1</h5>  
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title mb-0">Tareas</h4>
             </div><!-- end card header -->
 
             <div class="card-body">
@@ -26,8 +68,6 @@
                                 <button type="button" class="btn btn-success add-btn" data-bs-toggle="modal"
                                     id="create-btn" data-bs-target="#showModal" (click)="openModal(content)"><i
                                         class="ri-add-line align-bottom me-1"></i> Agregar</button>
-                                <button class="btn btn-soft-danger" (click)="deleteMultiple(deleteModel)" *ngIf="isChecked()"><i
-                                        class="ri-delete-bin-2-line"></i></button>
                             </div>
                         </div>
                         <div class="col-sm">
@@ -45,57 +85,30 @@
                         <table class="table">
                             <thead>
                                 <tr class="bg-light text-muted">
-                                    <th scope="col" style="width: 50px;">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" id="checkAll" value="option"
-                                                [(ngModel)]="masterSelected" (change)="checkUncheckAll($event)">
-                                        </div>
-                                    </th>
-                                    <th class="sort" data-sort="nombre">Nombre</th>
+                                    <th class="sort" data-sort="tarea">Tarea</th>
                                     <th class="sort" data-sort="descripcion">Descripcion</th>
-                                    <th class="sort" data-sort="area">Area</th>
+                                    <th class="sort" data-sort="responsable">Nombre Responsable</th>
+                                    <th class="sort" data-sort="fecha_plazo">Fecha Plazo</th>
                                     <th class="sort" style="width: 100px;">Acción</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let data of InstallationDatas" id="lj_{{data.id}}">
-                                    <th scope="row">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" name="checkAll"
-                                                value="{{data.id}}" [(ngModel)]="data.state">
-                                        </div>
-                                    </th>
-                                    <td><ngb-highlight [result]="data.nombre"
+                                <tr *ngFor="let data of TaskDatas" id="lj_{{data.id}}">
+                                    <td><ngb-highlight [result]="data.tarea"
                                             [term]="service.searchTerm"></ngb-highlight></td>
                                     <td><ngb-highlight [result]="data.descripcion"
                                             [term]="service.searchTerm"></ngb-highlight></td>
-                                    <td><ngb-highlight [result]="data.area.nombre"
+                                    <td><ngb-highlight [result]="data.responsable"
                                         [term]="service.searchTerm"></ngb-highlight></td>
                                     <td>
+                                    <td><ngb-highlight [result]="data.fecha_plazo"
+                                            [term]="service.searchTerm"></ngb-highlight></td>
+                                    <td>
                                         <div class="d-flex gap-2">
-                                            <!--<div class="edit">
-                                                <button class="btn btn-sm btn-success edit-item-btn"
-                                                    data-bs-toggle="modal" data-bs-target="#showModal"
-                                                    (click)="editModal(content,data.id)">Ver</button>
-                                            </div>
-                                            
-                                            <div class="edit">
-                                                <button class="btn btn-sm btn-primary edit-item-btn"
-                                                    (click)="goItems(data)">Items</button>
-                                            </div>
-                                            
-                                            <div class="remove">
-                                                <button class="btn btn-sm btn-danger remove-item-btn"
-                                                    data-bs-toggle="modal" data-bs-target="#deleteRecordModal"
-                                                    (click)="confirm(deleteModel,data.id)">Remover</button>
-                                            </div>-->
                                             <div class="hstack gap-3 fs-15">
                                                 <a href="javascript:void(0);" class="link-primary"
                                                 title="Ver" 
-                                                data-bs-toggle="modal" data-bs-target="#showModal" (click)="editModal(content,data.id)"><i class="ri-eye-line"></i></a>
-
-                                                <a href="javascript:void(0);" class="link-primary"
-                                                title="Sub Items" data-bs-toggle="modal" data-bs-target="#showModal" (click)="goItems(data)"><i class="ri-bubble-chart-fill"></i></a>
+                                                data-bs-toggle="modal" data-bs-target="#showModal" routerLink="/projects/{{project_id}}/compliance/{{data.id}}/Follow"><i class="ri-eye-line"></i></a>
                                                 
                                                 <a href="javascript:void(0);" class="link-danger" 
                                                 title="Eliminar"
@@ -133,18 +146,15 @@
         </div>
         <!-- end col -->
     </div>
-    <!-- end col -->
-</div>
-<!-- end row -->
 
 <!-- Add ListJs Data -->
 <ng-template #content role="document" let-modal>
     <div class="modal-header bg-light p-3">
-        <h5 class="modal-title" id="exampleModalLabel"><span *ngIf="installation_id">Sub </span>Instalación o proceso</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Tarea</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar" id="close-modal"
             (click)="modal.dismiss('Cross click')"></button>
     </div>
-    <form (ngSubmit)="saveInstallation()" [formGroup]="installationForm" class="tablelist-form" autocomplete="off">
+    <form (ngSubmit)="saveTask()" [formGroup]="taskForm" class="tablelist-form" autocomplete="off">
         <div class="modal-body">
 
             <input type="hidden" name="id" value="" formControlName="ids" />
@@ -155,14 +165,6 @@
             </div>
 
             <div class="mb-3">
-                <label for="customername-field" class="form-label">Nombre</label>
-                <input type="text" id="customername-field" class="form-control" placeholder="Ingresar Nombre" required
-                    formControlName="nombre"
-                    [ngClass]="{ 'is-invalid': submitted && form['nombre'].errors }" />
-                <div class="invalid-feedback">Por favor ingresa un nombre.</div>
-            </div>
-
-            <div class="mb-3">
                 <label for="email-field" class="form-label">Descripción</label>
                 <input type="text" id="email-field" class="form-control" placeholder="Ingresar Descripción" required
                     formControlName="descripcion" [ngClass]="{ 'is-invalid': submitted && form['descripcion'].errors }" />
@@ -170,26 +172,23 @@
             </div>
 
             <div class="mb-3">
-                <label for="area-field" class="form-label">Area Administrativa</label>
-                <select class="form-select mb-3" aria-label="Area Administrativa" placeholder="Seleccione Area Administrativa"
-                (change)="selectArea($event)">
-                    <option selected>Seleccione Area Administrativa </option>
-                    <option *ngFor="let r of areas;" value="{{r.id}}">{{r.nombre}}</option>
-                </select>
-                <div class="invalid-feedback">Por favor ingresar area administrativa.</div>
+                <label for="user-field" class="form-label">Fecha Plazo</label>
+                    <div class="form-icon right">
+                        <input class="form-control form-control-icon flatpickr-input" type="text" placeholder="Ingresar Fecha Plazo" required
+                        formControlName="fecha_plazo" [ngClass]="{ 'is-invalid': submitted && form['fecha_plazo'].errors }" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
+                        <i class="ri-calendar-todo-fill"></i>
+                    </div>
+                <div class="invalid-feedback">Por favor ingresar Fecha plazo.</div>
             </div>
 
-            
-            <ng-container *ngFor="let item of items;let i = index;">
-                <div class="mb-3">
-                    <label for="area-field" class="form-label">Sub Area Administrativa</label>
-                    <select class="form-select mb-3" placeholder="Seleccione Sub Area Administrativa" (change)="selectAreaChildren($event, i)">
-                                        <option selected>Seleccione Sub Area Administrativa</option>
-                                        <option *ngFor="let o of item.options;" value="{{o.id}}">{{o.nombre}}</option>
-                    </select>
-                    <div class="invalid-feedback">Por favor ingresar area administrativa.</div>
-                </div>
-            </ng-container>
+            <div class="mb-3">
+                <label for="user-field" class="form-label">Responsable</label>
+                <select class="form-select mb-3" aria-label="Responsable" formControlName="responsable" placeholder="Seleccione Responsable">
+                    <option selected>Seleccione Responsable </option>
+                    <option *ngFor="let r of responsables;" value="{{r.id}}">{{r.nombre}}</option>
+                </select>
+            <div class="invalid-feedback">Por favor ingresar responsable.</div>
+            </div>
 
         </div>
         <div class="modal-footer">
